{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 37,
  "lineage": "1334305d-7933-f8be-2e1a-09fa40048511",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-089a61beaa953da55",
            "domain": "vpc",
            "id": "eipalloc-0fa5f45ccddb6e7a9",
            "network_interface": "eni-0807637c6e833bcae",
            "private_dns": "ip-192-168-0-7.ap-south-1.compute.internal",
            "private_ip": "192.168.0.7",
            "public_dns": "ec2-3-6-35-197.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.35.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:959951701709:instance/i-03a751a3d680cf3de",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a751a3d680cf3de",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RHEL-Mum",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-022734917c9ae4759",
            "private_dns": "ip-192-168-0-117.ap-south-1.compute.internal",
            "private_ip": "192.168.0.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00b86c75d9d68d01c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e62e9a963f3594e",
            "tags": {
              "Enviromnment": "stage",
              "Name": "DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c3bfc8d6159597ad"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.pri-sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:959951701709:instance/i-07790ba7d928aa2c8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07790ba7d928aa2c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RHEL-Mum",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e52760686f8d723",
            "private_dns": "ip-192-168-0-41.ap-south-1.compute.internal",
            "private_ip": "192.168.0.41",
            "public_ip": "52.66.196.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06848ed5b7c293bb2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0660cd19e7be4f465",
            "tags": {
              "Enviromnment": "stage",
              "Name": "Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9ee03eed0e46d34"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.pub-sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959951701709:internet-gateway/igw-0474920c436635009",
            "id": "igw-0474920c436635009",
            "owner_id": "959951701709",
            "tags": {
              "Environment": "stage",
              "Name": "Demo-IGW"
            },
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa5f45ccddb6e7a9",
            "id": "nat-03fc0f81b36105a3c",
            "network_interface_id": "eni-0807637c6e833bcae",
            "private_ip": "192.168.0.7",
            "public_ip": "3.6.35.197",
            "subnet_id": "subnet-0660cd19e7be4f465",
            "tags": {
              "Environment": "stage",
              "Name": "Demo-NAT"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.pub-sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07c0b0b8a263b1929",
            "owner_id": "959951701709",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0474920c436635009",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "public-route"
            },
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00938c2d1bf06ca68",
            "owner_id": "959951701709",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03fc0f81b36105a3c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "private-route"
            },
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-route-associate1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb0c969c9ee3d450",
            "route_table_id": "rtb-00938c2d1bf06ca68",
            "subnet_id": "subnet-04e62e9a963f3594e"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.gw",
            "aws_route_table.r2",
            "aws_subnet.pri-sub1",
            "aws_subnet.pub-sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-associate1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e07a18784d0c99fc",
            "route_table_id": "rtb-07c0b0b8a263b1929",
            "subnet_id": "subnet-0660cd19e7be4f465"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.pub-sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959951701709:security-group/sg-0c3bfc8d6159597ad",
            "description": "Allow SSH DB inbpound ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3bfc8d6159597ad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from MYIP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9ee03eed0e46d34"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ALLOW SSH to DB",
            "name_prefix": "",
            "owner_id": "959951701709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959951701709:security-group/sg-0d9ee03eed0e46d34",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9ee03eed0e46d34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.207.197.169/32"
                ],
                "description": "SSH from MYIP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ALLOW SSH",
            "name_prefix": "",
            "owner_id": "959951701709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959951701709:subnet/subnet-04e62e9a963f3594e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.64/26",
            "id": "subnet-04e62e9a963f3594e",
            "map_public_ip_on_launch": false,
            "owner_id": "959951701709",
            "tags": {
              "Environment": "stage",
              "Name": "Pri-sub1"
            },
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959951701709:subnet/subnet-0660cd19e7be4f465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/26",
            "id": "subnet-0660cd19e7be4f465",
            "map_public_ip_on_launch": true,
            "owner_id": "959951701709",
            "tags": {
              "Environment": "stage",
              "Name": "Pub-sub1"
            },
            "vpc_id": "vpc-000069a04f62b6575"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959951701709:vpc/vpc-000069a04f62b6575",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0c6b15668d0bd0a15",
            "default_route_table_id": "rtb-0501be3ed29d17ff1",
            "default_security_group_id": "sg-03c2d0e65afd89c8e",
            "dhcp_options_id": "dopt-40b2462b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000069a04f62b6575",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0501be3ed29d17ff1",
            "owner_id": "959951701709",
            "tags": {
              "Environment": "stage",
              "Name": "Demo-vpc"
            }
          }
        }
      ]
    }
  ]
}